--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_feedme
-description: A new Flutter project.
+description: A simple automated cooking bots app to reduce workforce and increase their efficiency.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
